cabal-version:       >=1.10

name:                blockrender
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Wesley Hershberger
maintainer:          mggmugginsmc@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable blockrender
  main-is:              Main.hs
  -- other-modules:        Surface
  -- other-extensions:
  build-depends:
    base >=4.13 && <4.14,
    linear >=1.20 && <1.21,
    JuicyPixels >=3.2.9.5 && <=3.6
  -- hs-source-dirs:
  default-language:    Haskell2010
